# lexical-analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: NeZha2.txt  NeZha2_2025.srt  sample.txt
resources/: pos_blacklist.txt  user_dict.txt
scripts/: convert_subs.py  main.py  test_ltp.py
src/lexical_analyzer/: analyzer.py  cli.py  ltp_tokenizer.py  pos.py  pos_mapper.py  result.py  token.py  tokenizer_ltp.py
src/lexical_analyzer/io/: config_loader.py  data_loader.py
src/lexical_analyzer/tests/: new_anlzer_tst.py
src/tests/: pos_norm_tst.py
