[project]
name = "lexical-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "hf-xet>=1.2.0",
    "ltp>=4.2.14",
    "tokenizers>=0.11.0",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexical_analyzer"]

[project.scripts]
lexical-analyzer = "lexical_analyzer.cli:main"